--- a/server/views/game.pug
+++ b/server/views/game.pug
@@ -2,4 +2,7 @@ extends base.pug
 
 block content
     h1 game
+    script.
+        //- Give game code to client
+        var gameID = "#{code}";     
     script(src="/game.js" defer)
