--- a/server/views/friend.pug
+++ b/server/views/friend.pug
@@ -12,13 +12,13 @@ block content
     form(action="/game" method="post")
       label(for="enter-code") Enter a friend's code:
       input(type="text" id="enter-code" name="code" maxlength="6" autofocus)
-      input(type="hidden" name="unusedCode" value="#{code}")
+      input(type="hidden" name="unusedCode" value=code)
       button(type="submit" id="join-game-btn") Join Game
 
     // Form used when someone joins your game
     form#redirect-form(action="/game" method="post")
-      input#code-input(type="hidden" name="code" value="#{code}")
+      input#code-input(type="hidden" name="code" value=code)
       
-    script.
-      var gameID = "#{code}";
-    script(src="/friend.js" defer)
+  script.
+    var gameID = "#{code}";
+  script(src="/friend.js" defer)
