--- a/server/views/base.pug
+++ b/server/views/base.pug
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     title Galaga Team#{title ? ' | ' + title : ''}
     link(rel="stylesheet" href="/styles.css")
     link(href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet")
